# libmotor

./: Cargo.toml  LICENSE  readme.md
doc/: book.toml
doc/src/: SUMMARY.md  building_blocks.md  hall_sensors.md  intro.md  pid.md  pll.md  pt1.md  transformations.md
src/: dq.rs  hall.rs  lib.rs  motor.rs  pid.rs  pll.rs  pt1.rs
