[package]
name = "libmotor"
version = "0.1.0"
edition = "2021"
authors = ["Timo Werner <t.w92@gmx.de>"]
description = "motor control building blocks"
readme = "readme.md"
repository = "https://github.com/tomatenkuchen/libmotor"
license = "GPL-2.0"
keywords = [
  "motor control",
  "phase transformation",
  "control",
  "foc",
  "field oriented control",
]
categories = ["algorithms", "embedded", "science", "no-std", "no-std::no-alloc"]

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
micromath = "2.1.0"

[dependencies.num]
version = "0.4.3"
default-features = false

[dev-dependencies]
float-cmp = "0.10.0"
